@@ -287,6 +287,12 @@ other stories and things.</p>
 	<p><a href="http://groups.google.com/group/new-gem-generator">http://groups.google.com/group/new-gem-generator</a></p>
 
 
+	<h2>How to submit patches</h2>
+
+
+	<p>Read the <a href="http://drnicwilliams.com/2007/06/01/8-steps-for-fixing-other-peoples-code/">8 steps for fixing other people&#8217;s code</a> and for section <a href="http://drnicwilliams.com/2007/06/01/8-steps-for-fixing-other-peoples-code/#8b-google-groups">8b: Submit patch to Google Groups</a>, use the Google Group above.</p>
+
+
 	<h2>License</h2>
 
 
@@ -298,7 +304,7 @@ other stories and things.</p>
 
 	<p>Comments are welcome. Send an email to <a href="mailto:drnicwilliams@gmail.com">Dr Nic Williams</a>.</p>
     <p class="coda">
-      <a href="mailto:drnicwilliams@gmail.com">Dr Nic</a>, 27th May 2007<br>
+      <a href="mailto:drnicwilliams@gmail.com">Dr Nic</a>, 1st June 2007<br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>
     </p>
 </div>
